--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "clean": "rm -rf node_modules dist",
     "serve:cli": "ng serve",
-    "build": "tsc --noEmit && rollup -c rollup.config.ts",
+    "build": "tsc && rollup -c rollup.config.ts",
     "start": "rollup -c rollup.config.ts -w",
     "test": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
