--- a/package.json
+++ b/package.json
@@ -17,21 +17,18 @@
     "clean": "rm -rf node_modules dist",
     "serve:cli": "ng serve",
     "build": "tsc && rollup -c rollup.config.ts",
-    "start": "rollup -c rollup.config.ts -w",
-    "test": "ng test --watch=false --browsers=ChromeHeadless",
-    "lint": "ng lint",
-    "compodoc": "compodoc -p projects/cartesian/tsconfig.lib.json --output ./docs",
+    "build:watch": "rollup -c rollup.config.ts -w",  
     "commit": "git-cz",
     "semantic-release": "semantic-release"
   },
   "private": true,
-  "dependencies": {
-    "d3": "^5.9.2"
+  "peerDependencies": {
+    "d3": "^5.9.2",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@compodoc/compodoc": "^1.1.10",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
@@ -46,16 +43,21 @@
     "@types/d3-transition": "^2.0.0",
     "@types/lodash-es": "^4.17.4",
     "commitizen": "^4.0.3",
-    "cpr": "~3.0.0",
     "cz-conventional-changelog": "^3.0.2",
+    "d3": "^5.9.2",
     "husky": "^3.0.5",
-    "lodash-es": "^4.17.15",
+    "jest": "^26.6.3",
+    "jest-config": "^26.6.3",
+    "jest-html-reporter": "^3.3.0",
+    "jest-junit": "^12.0.0",
+    "lodash-es": "^4.17.21",
     "prettier": "~1.18.2",
     "pretty-quick": "^1.11.1",
     "rollup": "^2.42.1",
     "semantic-release": "^17.4.2",
-    "typescript": "^4.2",
-    "webpack": "^4.32.2"
+    "ts-jest": "^26.5.3",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2"
   },
   "config": {
     "commitizen": {
