--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,22 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "moduleResolution": "node",
+    "module": "esNext",
+    "target": "es5",
+    "lib": ["es2015", "es2016", "es2017", "esnext.array", "dom"],
+    "strict": true,
     "sourceMap": true,
     "declaration": true,
-    "module": "es2020",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strict": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "noEmitOnError": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "downlevelIteration": true,
-    "importHelpers": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2015",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"],
-    "paths": {
-      "@Ikshanam/d3-charts": ["dist/d3-charts"],
-      "@Ikshanam/d3-charts/*": ["dist/d3-charts/*"]
-    }
-  }
+    "declarationDir": "dist/types",
+    "types": ["jest"]
+  },
+  "include": ["src"]
 }
+
