--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d3-charts",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "author": "Anand Tiwary",
   "repository": "git@github.com:Ikshanam/d3-charts.git",
   "license": "MIT",
