--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "tslib": "^2.1.0",
     "typescript": "^4.2"
   },
+  "release": {
+    "branches": ["main"]
+  },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
