--- a/package.json
+++ b/package.json
@@ -66,7 +66,23 @@
     "typescript": "^4.2"
   },
   "release": {
-    "branches": ["main"]
+    "branch": "main",
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogFile": "CHANGELOG.md"
+        }
+      ],
+      [
+        "@semantic-release/git",
+        {
+          "assets": ["CHANGELOG.md"]
+        }
+      ]
+    ]
   },
   "config": {
     "commitizen": {
