--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/release-notes-generator": "^9.0.2",
     "@types/d3-array": "^1.0.12",
     "@types/d3-axis": "^1.0.12",
     "@types/d3-color": "^1.0.12",
@@ -79,7 +83,9 @@
       [
         "@semantic-release/git",
         {
-          "assets": ["CHANGELOG.md"]
+          "assets": [
+            "CHANGELOG.md"
+          ]
         }
       ]
     ]
