--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "typescript": "^4.2"
   },
   "release": {
-    "branch": "main",
+    "branches": ["main"],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
