--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@rollup/plugin-typescript": "^8.2.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.0",
     "@semantic-release/release-notes-generator": "^9.0.2",
     "@types/d3-array": "^1.0.12",
     "@types/d3-axis": "^1.0.12",
@@ -70,7 +70,9 @@
     "typescript": "^4.2"
   },
   "release": {
-    "branches": ["main"],
+    "branches": [
+      "main"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
@@ -81,10 +83,16 @@
         }
       ],
       [
-        "@semantic-release/git",
+        "@semantic-release/github",
         {
           "assets": [
-            "CHANGELOG.md"
+            [
+              "dist"
+            ],
+            {
+              "path": "CHANGELOG.md",
+              "label": "Changelog"
+            }
           ]
         }
       ]
