--- a/projects/charts/package.json
+++ b/projects/charts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "d3-charts",
+  "name": "@ikshanam/d3-charts",
   "version": "0.0.0-development",
   "author": "Anand Tiwary",
   "repository": "git@github.com:Ikshanam/d3-charts.git",
