--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "bundle:libs": "rollup -c ./projects/charts/rollup.config.ts",
     "bundle:watch": "rollup -c ./projects/charts/rollup.config.ts -w",
     "commit": "git-cz",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "private": true,
-  "peerDependencies": {
+  "dependencies": {
     "d3": "^5.9.2",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@rollup/plugin-commonjs": "^17.1.0",
@@ -38,6 +41,10 @@
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.2",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/html": "^6.1.21",
     "@types/d3-array": "^1.0.12",
     "@types/d3-axis": "^1.0.12",
     "@types/d3-color": "^1.0.12",
@@ -48,7 +55,9 @@
     "@types/d3-time-format": "^2.1.1",
     "@types/d3-transition": "^2.0.0",
     "@types/lodash-es": "^4.17.4",
+    "babel-loader": "^8.2.2",
     "commitizen": "^4.0.3",
+    "core-js": "^3.9.1",
     "cz-conventional-changelog": "^3.0.2",
     "d3": "^5.9.2",
     "husky": "^3.0.5",
