--- a/projects/charts/package.json
+++ b/projects/charts/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
     "D3",
