--- a/projects/charts/package.json
+++ b/projects/charts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ikshana/d3-charts",
+  "name": "@ikshanam/d3-charts",
   "version": "0.0.0-development",
   "author": "Anand Tiwary",
   "repository": "git@github.com:Ikshanam/d3-charts.git",
@@ -11,8 +11,7 @@
     "dist"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "D3",
