--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-loader": "^8.2.2",
     "commitizen": "^4.0.3",
     "core-js": "^3.9.1",
+    "css-loader": "^5.1.3",
     "cz-conventional-changelog": "^3.0.2",
     "d3": "^5.9.2",
     "husky": "^3.0.5",
@@ -68,7 +69,9 @@
     "rollup": "^2.42.1",
     "rollup-plugin-copy": "^3.4.0",
     "semantic-release": "^17.4.2",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.3",
+    "ts-loader": "^8.0.18",
     "tslib": "^2.1.0",
     "typescript": "^4.2"
   },
