--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.3",
     "ts-loader": "^8.0.18",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "tslib": "^2.1.0",
     "typescript": "^4.2"
   },
