refactor: updating build ci

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,7 +35,7 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Build
-        run: npm run build
+        run: npm run build:ci
 
       - name: Archive build artifacts
         uses: actions/upload-artifact@v2
