--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ikshanam/d3-charts",
+  "name": "@samskara-ui/d3-charts",
   "version": "0.0.0-development",
   "author": "Anand Tiwary",
   "repository": "git@github.com:Ikshanam/d3-charts.git",
@@ -10,24 +10,22 @@
     "Charts",
     "Visualization"
   ],
-  "main": "./d3-charts-app.umd.js",
-  "module": "./d3-charts-app.es5.js",
-  "typings": "./types/index.d.ts",
   "scripts": {
-    "clean": "rm -rf node_modules dist",
+    "clean": "rm -rf dist",
     "serve:cli": "ng serve",
-    "build:ci": "npm run bundle:libs && npm run bundle:app",
+    "build:ci": "npm run bundle:libs && npm run build:app:prod",
     "bundle:libs": "rollup -c ./projects/charts/rollup.config.ts",
-    "bundle:app": "rollup -c ./rollup.config.ts",
-    "bundle:watch": "rollup -c ./projects/charts/rollup.config.ts -w",
+    "build:app:dev": "webpack build --mode=development",
+    "build:app:prod": "webpack build --mode=production",
+    "build:app:serve": "webpack serve",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "docs": "typedoc ./projects/charts/src/index.ts --tsconfig ./projects/charts/tsconfig.lib.json"
   },
   "private": true,
   "dependencies": {
+    "@types/node": "^14.14.37",
+    "@types/webpack": "^5.0.0",
     "d3": "^5.9.2",
     "lodash-es": "^4.17.21"
   },
@@ -43,10 +41,6 @@
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.2",
-    "@storybook/addon-actions": "^6.1.21",
-    "@storybook/addon-essentials": "^6.1.21",
-    "@storybook/addon-links": "^6.1.21",
-    "@storybook/html": "^6.1.21",
     "@types/d3-array": "^1.0.12",
     "@types/d3-axis": "^1.0.12",
     "@types/d3-color": "^1.0.12",
@@ -57,18 +51,22 @@
     "@types/d3-time-format": "^2.1.1",
     "@types/d3-transition": "^2.0.0",
     "@types/lodash-es": "^4.17.4",
+    "@types/webpack-dev-server": "^3.11.3",
     "babel-loader": "^8.2.2",
     "commitizen": "^4.0.3",
     "core-js": "^3.9.1",
-    "css-loader": "^5.1.3",
+    "css-loader": "^5.2.0",
     "cz-conventional-changelog": "^3.0.2",
     "d3": "^5.9.2",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
     "husky": "^3.0.5",
     "jest": "^26.6.3",
     "jest-config": "^26.6.3",
     "jest-html-reporter": "^3.3.0",
     "jest-junit": "^12.0.0",
     "lodash-es": "^4.17.21",
+    "path": "^0.12.7",
     "prettier": "~1.18.2",
     "pretty-quick": "^1.11.1",
     "rollup": "^2.42.1",
@@ -81,7 +79,10 @@
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "tslib": "^2.1.0",
     "typedoc": "^0.20.34",
-    "typescript": "^4.2"
+    "typescript": "^4.2",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "release": {
     "branches": [
