--- a/package.json
+++ b/package.json
@@ -128,7 +128,9 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -e $GIT_PARAMS"
+      "commit-msg": "commitlint -e $GIT_PARAMS",
+      "pre-push": "npm run build:ci",
+      "pre-commit": "pretty-quick --staged"
     }
   }
 }
