--- a/package.json
+++ b/package.json
@@ -128,7 +128,8 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -e $GIT_PARAMS"
+      "commit-msg": "commitlint -e $GIT_PARAMS",
+      "push": "npm run build:ci"
     }
   }
 }
