--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "serve:cli": "ng serve",
     "build:ci": "npm run bundle:libs && npm run build:app:prod",
     "bundle:libs": "rollup -c ./projects/charts/rollup.config.ts",
-    "build:app:dev": "webpack build --mode=development",
-    "build:app:prod": "webpack build --mode=production",
+    "build:app:dev": "webpack build --mode=development -c webpack.config.js",
+    "build:app:prod": "webpack build --mode=production -c webpack.config.js",
     "build:app:serve": "webpack serve",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
@@ -58,6 +58,9 @@
     "css-loader": "^5.2.0",
     "cz-conventional-changelog": "^3.0.2",
     "d3": "^5.9.2",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "esdoc-typescript-plugin": "^1.0.1",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^3.0.5",
