--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "jest-junit": "^12.0.0",
     "lodash-es": "^4.17.21",
     "path": "^0.12.7",
-    "prettier": "~1.18.2",
-    "pretty-quick": "^1.11.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "rollup": "^2.42.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-scss": "^2.6.1",
