--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
     "outDir": "dist/lib",
     "types": ["jest"],
     "paths": {
-      "@samskara-ui/d3-charts": ["dist/charts"],
-      "@samskara-ui/d3-charts/*": ["dist/charts/*"]
+      "@twig-it/d3-charts": ["dist/charts"],
+      "@twig-it/d3-charts/*": ["dist/charts/*"]
     }
   },
   "include": ["src/**/*"]
