--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Npm Install
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm config set '//npm.pkg.github.com/:_authToken' "${GPRREAD}" && npm ci
+        run: npm config set '//npm.pkg.github.com/:_authToken' "${GPREAD}" && npm ci
         env:
           GPRREAD: ${{ secrets.GPREAD }}
   build:
