--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Npm Install
-        run: npm config set '//npm.pkg.github.com/:_authToken' "${GPRREAD}" && npm ci
+        run: npm config set '//npm.pkg.github.com/:_authToken' "${GPREAD}" && npm ci
         env:
           GPRREAD: ${{ secrets.GPREAD }}
 
