--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -22,7 +22,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm config set '//npm.pkg.github.com/:_authToken' "${GPREAD}" && npm ci
         env:
-          GPRREAD: ${{ secrets.GPREAD }}
+          GPREAD: ${{ secrets.GPREAD }}
   build:
     runs-on: ubuntu-20.04
     needs: [npm-install]
